# GPG-Gui

./: .gitattributes  .gitignore  GPG-Gui  INSTALL  Makefile  README  README.md  compileandrun.sh  meson.build  meson_options.txt
.github/workflows/: build.yml  ci.yml
data/: gpg-gui.desktop.in  meson.build
data/icons/: meson.build
include/: config.h.in  meson.build
misc/: vala-lint.conf
scripts/: create-tarball.sh  gen_unity_source.sh  git-revision.sh  meson-postinstall.sh  meson.build  source_files.py  source_files.sh  version.sh
src/: AboutDialog.vala  Controller.vala  GPGHandler.vala  GPGOperation.vala  GPGOperationType.vala  GPGProcess.vala  Helper.vala  Main.vala  MainFrame.vala  MainWindow.vala  ProgressIndicator.vala  TerminalWindow.vala  meson.build
vapi/: config.vapi  meson.build
